# itmo_prog_labs

./: README.md
lab1/: README.md
lab1/part1/: CGeometry.cpp  CGeometry.h  lab1part1.cpp
lab1/part2/: CPolynom.cpp  CPolynom.h  lab1part2.cpp
lab2/: CMakeLists.txt  README.md  classes.cpp  classes.h  lab2.cpp
lab3/: CMakeLists.txt  README.md
lab3/src/: Alghorithms.h  CRational.cpp  CRational.h  CircularBuffer.h  main.cpp
lab3/tst/: lab3tests.cpp
lab4/: CMakeLists.txt  README.md
lab4/src/: CMakeLists.txt  Cube.cpp  Cube.h  Face.cpp  Face.h  Functions.cpp  Functions.h  GraphicCube.cpp  GraphicCube.h  GraphicSmallCube.cpp  GraphicSmallCube.h  SmallCube.cpp  SmallCube.h  main.cpp
lab4/tst/: CMakeLists.txt  lab4_tests.cpp
lab5/: CMakelists.txt  README.md
lab5/src/: lab5.cpp
lab6/: CMakeLists.txt  README.md
lab6/src/: CMakeLists.txt  Polynom.h  main.cpp
lab6/tst/: CMakeLists.txt  lab6tests.cpp
